--- a/templates/home.html
+++ b/templates/home.html
@@ -2,6 +2,10 @@
 	<head>
 		<title>Headlines</title>
 	</head>
+	<form>
+		<input type="text" name="publication" placeholder="search" />
+		<input type="submit" value="Submit" />
+	</form>
 	<body>
 		{% for article in articles %}
 			<b><a href="{{article.link}}">{{article.title}}</a></b><br />
