Form test changes

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>Headlines</title>
 	</head>
+	<form action="/" method="POST">
 	<form>
 		<input type="text" name="publication" placeholder="search" />
 		<input type="submit" value="Submit" />
