--- a/templates/home.html
+++ b/templates/home.html
@@ -2,11 +2,35 @@
 	<head>
 		<title>Headlines</title>
 	</head>
-	<form>
-		<input type="text" name="publication" placeholder="search" />
-		<input type="submit" value="Submit" />
-	</form>
 	<body>
+		<h1>Headlines</h1>
+		<h2>Current weather</h2>
+		<form>
+			<input type="text" name="city" placeholder="wearther search">
+			<input type="submit" value="Submit">
+		</form>
+		<p>City: <b>{{weather.city}}, {{weather.country}}</b></p>
+		<p>{{weather.description}} |{{weather.temperature}}&#8451;</p>
+		<h2>Currency</h2>
+		<form>
+			from: <select name="currency_from">
+				  	{% for currency in currencies %}
+					 	<option value="{{currency}}" {% if(currency_from==currency) %} selected="selected" {% endif %}>{{currency}}</option>
+					{% endfor %}
+				</select>
+			to: <select name="currency_to">
+					{% for currency in currencies %}
+						<option value="{{currency}}" {% if(currency_to==currency) %} selected="selected" {% endif %}>{{currency}}</option>
+					{% endfor %}
+				</select>
+				<input type="submit" value="Submit">
+		</form>
+		1 {{currency_from}} = {{currency_to}} {{rate}}
+		<h2>Headlines</h2>
+		<form>
+			<input type="text" name="publication" placeholder="publication search" />
+			<input type="submit" value="Submit" />
+		</form>
 		{% for article in articles %}
 			<b><a href="{{article.link}}">{{article.title}}</a></b><br />
 			<i>{{article.published}}</i><br />
